--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+4
+  provider: 4.3.3
 
 dev_dependencies:
   mobx_codegen: ^1.1.2
