--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+4
   provider: 4.3.3
+  sqflite: ^1.3.2+3
 
 dev_dependencies:
   mobx_codegen: ^1.1.2
@@ -19,11 +20,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
